Hardness Data Processed

--- a/webscraper.ipynb
+++ b/webscraper.ipynb
@@ -2701,9 +2701,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 149,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "     Unnamed: 0    A5                  AWS  \\\n",
+      "0             0   NaN     A 5.7: ER CuSi-A   \n",
+      "1             1  12.0    A 5.9: ER 430H Mo   \n",
+      "2             2  22.0        A 5.1: E 6013   \n",
+      "3             3  19.0    A 5.5: E 10018-D2   \n",
+      "4             4  17.0  A 5.5: E 10018-G-H4   \n",
+      "..          ...   ...                  ...   \n",
+      "655         655   NaN         5.31: FB3-F    \n",
+      "656         656   NaN                FB4-D   \n",
+      "657         657   NaN          no standard   \n",
+      "658         658   NaN      A 5.6: E CuSn-C   \n",
+      "659         659  16.0       A5.24: ER Zr 2   \n",
+      "\n",
+      "                                          Applications  Category  \\\n",
+      "0    Brazing thin plates and or galvanized plates i...       1.0   \n",
+      "1    Stainles steel shafts, steam valves, clutch su...       2.0   \n",
+      "2    Trucks, trailers, wagons, shipbuilding, yacht ...       3.0   \n",
+      "3    Recommended for welding high yield strength st...       3.0   \n",
+      "4    Designed for welding steels with tensile stren...       3.0   \n",
+      "..                                                 ...       ...   \n",
+      "655                                                NaN       5.0   \n",
+      "656                                                NaN       5.0   \n",
+      "657                                                NaN       8.0   \n",
+      "658  Zibro is suitable for welding and overlaying c...       3.0   \n",
+      "659  Zirconium Zr 702 is used widely in many indust...       2.0   \n",
+      "\n",
+      "                                             DIN   DIN_W Hardness  \\\n",
+      "0                                 1733: SG-CuSi3  2.1461       80   \n",
+      "1                            8556: SG X 35CrMo17  1.4122       45   \n",
+      "2                           1913: E 51 32 RR(C)5     NaN      NaN   \n",
+      "3                         8529: EY 62 75 Mn1 MoB     NaN      NaN   \n",
+      "4                    8529: EY 62 77 Mn2NiMo B H5     NaN      NaN   \n",
+      "..                                           ...     ...      ...   \n",
+      "655                                  8511: F-SH2     NaN      NaN   \n",
+      "656                                  8511: F-SH1     NaN      NaN   \n",
+      "657                                          NaN     NaN       72   \n",
+      "658  1733: EL-CuSn 7    (8555: E 30-UM-100-CNR )  2.1025      120   \n",
+      "659                                          NaN     NaN      NaN   \n",
+      "\n",
+      "    Heat_Treated  IE-20  ...   B  Al  Co  Zn  Zr  Mg  Be  Ag   Sn Ni+Co  \n",
+      "0            NaN    NaN  ... NaN NaN NaN NaN NaN NaN NaN NaN  NaN   NaN  \n",
+      "1             AW    NaN  ... NaN NaN NaN NaN NaN NaN NaN NaN  NaN   NaN  \n",
+      "2             AW   47.0  ... NaN NaN NaN NaN NaN NaN NaN NaN  NaN   NaN  \n",
+      "3             AW    NaN  ... NaN NaN NaN NaN NaN NaN NaN NaN  NaN   NaN  \n",
+      "4            AW   110.0  ... NaN NaN NaN NaN NaN NaN NaN NaN  NaN   NaN  \n",
+      "..           ...    ...  ...  ..  ..  ..  ..  ..  ..  ..  ..  ...   ...  \n",
+      "655         0,25    NaN  ... NaN NaN NaN NaN NaN NaN NaN NaN  NaN   NaN  \n",
+      "656          NaN    NaN  ... NaN NaN NaN NaN NaN NaN NaN NaN  NaN   NaN  \n",
+      "657       PCHT+N    NaN  ... NaN NaN NaN NaN NaN NaN NaN NaN  NaN   NaN  \n",
+      "658           AW    NaN  ... NaN NaN NaN NaN NaN NaN NaN NaN  7.0   NaN  \n",
+      "659           AW    NaN  ... NaN NaN NaN NaN NaN NaN NaN NaN  NaN   NaN  \n",
+      "\n",
+      "[660 rows x 47 columns]\n"
+     ]
+    }
+   ],
    "source": [
     "data = pd.read_csv('welding_data.csv')\n",
     "print(data)"
@@ -3341,7 +3401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 152,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3912,23 +3972,118 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
     "raw = pd.read_csv('raw_data.csv')\n",
-    "raw = raw.join(harddata)"
+    "#raw = raw.join(harddata)\n",
+    "raw = raw.drop(\"Unnamed: 0\", axis=1)\n",
+    "raw = raw.drop(\"Unnamed: 0.1\", axis=1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "raw['Hardness_Scale']= np.where(raw['Hardness_Scale'].str.contains('HB'), 'HB',raw['Hardness_Scale'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "\"['Heat_Treated_As'] not in index\"",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-91-6a9ff17214cd>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mcols\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m'Hardness'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'Hardness_Scale'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'Redrying_Temp'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'Redry_Time'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'Heat_Treated'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'Heat_Treated_As'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mraw\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mraw\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mcols\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m~/anaconda3/lib/python3.7/site-packages/pandas/core/frame.py\u001b[0m in \u001b[0;36m__getitem__\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   2984\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mis_iterator\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2985\u001b[0m                 \u001b[0mkey\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 2986\u001b[0;31m             \u001b[0mindexer\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mloc\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_convert_to_indexer\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mraise_missing\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   2987\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2988\u001b[0m         \u001b[0;31m# take() does not accept boolean indexers\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/anaconda3/lib/python3.7/site-packages/pandas/core/indexing.py\u001b[0m in \u001b[0;36m_convert_to_indexer\u001b[0;34m(self, obj, axis, is_setter, raise_missing)\u001b[0m\n\u001b[1;32m   1283\u001b[0m                 \u001b[0;31m# When setting, missing keys are not allowed, even with .loc:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1284\u001b[0m                 \u001b[0mkwargs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m{\u001b[0m\u001b[0;34m\"raise_missing\"\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;32mTrue\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0mis_setter\u001b[0m \u001b[0;32melse\u001b[0m \u001b[0mraise_missing\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1285\u001b[0;31m                 \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_get_listlike_indexer\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mobj\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1286\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1287\u001b[0m             \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/anaconda3/lib/python3.7/site-packages/pandas/core/indexing.py\u001b[0m in \u001b[0;36m_get_listlike_indexer\u001b[0;34m(self, key, axis, raise_missing)\u001b[0m\n\u001b[1;32m   1090\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1091\u001b[0m         self._validate_read_indexer(\n\u001b[0;32m-> 1092\u001b[0;31m             \u001b[0mkeyarr\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mindexer\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mo\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_get_axis_number\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0maxis\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mraise_missing\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mraise_missing\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1093\u001b[0m         )\n\u001b[1;32m   1094\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mkeyarr\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mindexer\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/anaconda3/lib/python3.7/site-packages/pandas/core/indexing.py\u001b[0m in \u001b[0;36m_validate_read_indexer\u001b[0;34m(self, key, indexer, axis, raise_missing)\u001b[0m\n\u001b[1;32m   1183\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mname\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m\"loc\"\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mraise_missing\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1184\u001b[0m                 \u001b[0mnot_found\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mset\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0mset\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0max\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1185\u001b[0;31m                 \u001b[0;32mraise\u001b[0m \u001b[0mKeyError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"{} not in index\"\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnot_found\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1186\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1187\u001b[0m             \u001b[0;31m# we skip the warning on Categorical/Interval\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mKeyError\u001b[0m: \"['Heat_Treated_As'] not in index\""
+     ]
+    }
+   ],
+   "source": [
+    "cols = ['Hardness','Hardness_Scale', 'Redrying_Temp', 'Redry_Time','Heat_Treated']\n",
+    "raw = raw[cols]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "raw['Hardness_Scale'] = np.where(raw['Hardness'].isna(), np.nan, raw['Hardness_Scale'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "raw['Hardness'] = raw['Hardness'].str.replace(\"0  30\",\"0\")\n",
+    "raw['Hardness'] = raw['Hardness'].str.split(\"-\",expand=True).astype(float).mean(axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "raw['Hardness_Scale'] = raw['Hardness_Scale'].replace(\"HRb \", \"HRB\")\n",
+    "raw['Hardness_Scale'] = raw['Hardness_Scale'].str.upper()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "raw['Hardness_Scale']=pd.factorize(raw['Hardness_Scale'])[0] + 1\n",
+    "'''\n",
+    "0- nan\n",
+    "hb\n",
+    "hrb\n",
+    "hrc\n",
+    "hrc/hrv\n",
+    "hrh\n",
+    "hv\n",
+    "'''"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 141,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#raw['Heat_Treated_As'] = np.nan\n",
+    "raw['Heat_Treated_As'] = np.where(raw['Heat_Treated'] == 'As brazed','AB', raw['Heat_Treated_As'] )\n",
+    "raw['Heat_Treated'] = np.where(raw['Heat_Treated'] == 'As brazed','treated', raw['Heat_Treated'] )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 142,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2103d4f241204eaaa24dce2cce5fad64",
+       "model_id": "1dd1ad091b224f0d97bfaf8e3cb10a3f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -3941,7 +4096,7 @@
     }
    ],
    "source": [
-    "qgrid.show_grid(raw, show_toolbar=True)"
+    "qgrid.show_grid(raw, show_toolbar=True)\n"
    ]
   },
   {
@@ -3950,12 +4105,61 @@
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": 28,
+   "cell_type": "raw",
    "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 143,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "raw.to_csv(\"raw_data.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 146,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "raw = raw.drop(columns=['Heat_Treated', 'Heat_Treated_As'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 150,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = raw.combine_first(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 153,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "eed9f75a30ac466e873e256a382e754d",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "QgridWidget(grid_options={'fullWidthRows': True, 'syncColumnCellResize': True, 'forceFitColumns': True, 'defau…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "qgrid.show_grid(data['Applications'], show_toolbar=True)"
    ]
   },
   {
