--- a/webscraper.ipynb
+++ b/webscraper.ipynb
@@ -15,402 +15,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Initialization Data Loading Code\n",
+    "data = pd.read_json(r\"welding_data.json\", orient='index')\n",
+    "meta_data = pd.read_json(r\"metal_data.json\", orient='index')\n",
+    "#data = data.drop(columns=['Unnamed: 0', 'Unnamed: 0.1'], axis = 0)\n",
+    "cols = data.columns[30:]\n",
+    "\n",
+    "\n",
+    "#Strange metal_comp - 560? , "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>A5</th>\n",
-       "      <th>AWS</th>\n",
-       "      <th>Ag</th>\n",
-       "      <th>Al</th>\n",
-       "      <th>Applications</th>\n",
-       "      <th>B</th>\n",
-       "      <th>Be</th>\n",
-       "      <th>C</th>\n",
-       "      <th>Category</th>\n",
-       "      <th>Co</th>\n",
-       "      <th>...</th>\n",
-       "      <th>S</th>\n",
-       "      <th>Si</th>\n",
-       "      <th>Sn</th>\n",
-       "      <th>Suitable_For</th>\n",
-       "      <th>Ti</th>\n",
-       "      <th>V</th>\n",
-       "      <th>W</th>\n",
-       "      <th>Zn</th>\n",
-       "      <th>Zr</th>\n",
-       "      <th>url</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>A 5.7: ER CuSi-A</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Brazing thin plates and or galvanized plates i...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2.875</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Joining thin steel plates and or galvanized pl...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>http://www.ceweld.nl/en/product/cusi-3-laser-b...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>1</td>\n",
-       "      <td>12.0</td>\n",
-       "      <td>A 5.9: ER 430H Mo</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Stainles steel shafts, steam valves, clutch su...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.40</td>\n",
-       "      <td>2</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.500</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>X35CrMo17, Cast steels, hardfacing pumps, shaf...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>http://www.ceweld.nl/en/product/14122</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>10</td>\n",
-       "      <td>8.0</td>\n",
-       "      <td>A 5.9:</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Joining and cladding high heat resistant CrNi-...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.45</td>\n",
-       "      <td>2</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1.100</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1.4852, 1.4853, G-X 40 NiCrNb 35 25, 1.4857, G...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>http://www.ceweld.nl/en/product/25-35nb</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>100</td>\n",
-       "      <td>22.0</td>\n",
-       "      <td>A 5.5: E 7018-A1</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Mo alloyed basic electrode for welding heat an...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.10</td>\n",
-       "      <td>3</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.500</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>17Mn4, 19Mn5, 15Mo3, 16Mo3, P235GH, P265GH, P2...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>http://www.ceweld.nl/en/product/7018-a1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>101</td>\n",
-       "      <td>24.0</td>\n",
-       "      <td>A 5.1: E 7018-1 H4R</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>High strenght steel constructions, offshore pl...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.08</td>\n",
-       "      <td>3</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.015</td>\n",
-       "      <td>0.600</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>\\n\\nBase metal\\nDIN\\nEN\\nASTM\\n\\n\\nShipbuildin...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>http://www.ceweld.nl/en/product/7018-1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>95</td>\n",
-       "      <td>22.0</td>\n",
-       "      <td>A 5.1: E 6012</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Shipbuilding, general construction, vessels, w...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.08</td>\n",
-       "      <td>3</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.300</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>\\n\\n\\nSteel type:Unalloyed steels:Boiler plat...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>http://www.ceweld.nl/en/product/6013-s</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>96</td>\n",
-       "      <td>22.0</td>\n",
-       "      <td>A 5.1: E 6013</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Yacht building, wagon building, train, ship bu...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.08</td>\n",
-       "      <td>3</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.450</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>\\n\\nDIN:Unalloyed steels:Boiler plates:Pipe st...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>http://www.ceweld.nl/en/product/6013-t</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>97</td>\n",
-       "      <td>24.0</td>\n",
-       "      <td>A 5.1: E 6018-1 H4R</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Pipe work, shipbuilding, bufferlayers, vessel ...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.03</td>\n",
-       "      <td>3</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.012</td>\n",
-       "      <td>0.270</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>\\n\\nMaterials\\nEN\\nASTM\\n\\n\\nshipbuilding stee...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>http://www.ceweld.nl/en/product/6018-lc</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>98</td>\n",
-       "      <td>22.0</td>\n",
-       "      <td>A 5.5: E 7010-A1</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>7010 A 1 is our cellulosic electrode for the v...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.10</td>\n",
-       "      <td>3</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.150</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>St:37.2, 44.2, 37.3, 52.3, H1, H11, 210.7, 290...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>http://www.ceweld.nl/en/product/7010</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>99</td>\n",
-       "      <td>22.0</td>\n",
-       "      <td>A 5.1: E 7016</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Repair welding, root runs, vessel, shipbuildin...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.05</td>\n",
-       "      <td>3</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.650</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>\\n\\nBase metal\\nDIN\\nEN\\nASTM\\n\\n\\nShipbuildin...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>http://www.ceweld.nl/en/product/7016</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>660 rows × 51 columns</p>\n",
-       "</div>"
-      ],
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "9357aa99ffaa4ac08e4eeef72bff46fd",
+       "version_major": 2,
+       "version_minor": 0
+      },
       "text/plain": [
-       "       A5                  AWS  Ag  Al  \\\n",
-       "0     NaN     A 5.7: ER CuSi-A NaN NaN   \n",
-       "1    12.0    A 5.9: ER 430H Mo NaN NaN   \n",
-       "10    8.0               A 5.9: NaN NaN   \n",
-       "100  22.0     A 5.5: E 7018-A1 NaN NaN   \n",
-       "101  24.0  A 5.1: E 7018-1 H4R NaN NaN   \n",
-       "..    ...                  ...  ..  ..   \n",
-       "95   22.0        A 5.1: E 6012 NaN NaN   \n",
-       "96   22.0        A 5.1: E 6013 NaN NaN   \n",
-       "97   24.0  A 5.1: E 6018-1 H4R NaN NaN   \n",
-       "98   22.0     A 5.5: E 7010-A1 NaN NaN   \n",
-       "99   22.0        A 5.1: E 7016 NaN NaN   \n",
-       "\n",
-       "                                          Applications   B  Be     C  \\\n",
-       "0    Brazing thin plates and or galvanized plates i... NaN NaN   NaN   \n",
-       "1    Stainles steel shafts, steam valves, clutch su... NaN NaN  0.40   \n",
-       "10   Joining and cladding high heat resistant CrNi-... NaN NaN  0.45   \n",
-       "100  Mo alloyed basic electrode for welding heat an... NaN NaN  0.10   \n",
-       "101  High strenght steel constructions, offshore pl... NaN NaN  0.08   \n",
-       "..                                                 ...  ..  ..   ...   \n",
-       "95   Shipbuilding, general construction, vessels, w... NaN NaN  0.08   \n",
-       "96   Yacht building, wagon building, train, ship bu... NaN NaN  0.08   \n",
-       "97   Pipe work, shipbuilding, bufferlayers, vessel ... NaN NaN  0.03   \n",
-       "98   7010 A 1 is our cellulosic electrode for the v... NaN NaN  0.10   \n",
-       "99   Repair welding, root runs, vessel, shipbuildin... NaN NaN  0.05   \n",
-       "\n",
-       "     Category  Co  ...      S     Si  Sn  \\\n",
-       "0           1 NaN  ...    NaN  2.875 NaN   \n",
-       "1           2 NaN  ...    NaN  0.500 NaN   \n",
-       "10          2 NaN  ...    NaN  1.100 NaN   \n",
-       "100         3 NaN  ...    NaN  0.500 NaN   \n",
-       "101         3 NaN  ...  0.015  0.600 NaN   \n",
-       "..        ...  ..  ...    ...    ...  ..   \n",
-       "95          3 NaN  ...    NaN  0.300 NaN   \n",
-       "96          3 NaN  ...    NaN  0.450 NaN   \n",
-       "97          3 NaN  ...  0.012  0.270 NaN   \n",
-       "98          3 NaN  ...    NaN  0.150 NaN   \n",
-       "99          3 NaN  ...    NaN  0.650 NaN   \n",
-       "\n",
-       "                                          Suitable_For  Ti   V   W  Zn  Zr  \\\n",
-       "0    Joining thin steel plates and or galvanized pl... NaN NaN NaN NaN NaN   \n",
-       "1    X35CrMo17, Cast steels, hardfacing pumps, shaf... NaN NaN NaN NaN NaN   \n",
-       "10   1.4852, 1.4853, G-X 40 NiCrNb 35 25, 1.4857, G... NaN NaN NaN NaN NaN   \n",
-       "100  17Mn4, 19Mn5, 15Mo3, 16Mo3, P235GH, P265GH, P2... NaN NaN NaN NaN NaN   \n",
-       "101  \\n\\nBase metal\\nDIN\\nEN\\nASTM\\n\\n\\nShipbuildin... NaN NaN NaN NaN NaN   \n",
-       "..                                                 ...  ..  ..  ..  ..  ..   \n",
-       "95    \\n\\n\\nSteel type:Unalloyed steels:Boiler plat... NaN NaN NaN NaN NaN   \n",
-       "96   \\n\\nDIN:Unalloyed steels:Boiler plates:Pipe st... NaN NaN NaN NaN NaN   \n",
-       "97   \\n\\nMaterials\\nEN\\nASTM\\n\\n\\nshipbuilding stee... NaN NaN NaN NaN NaN   \n",
-       "98   St:37.2, 44.2, 37.3, 52.3, H1, H11, 210.7, 290... NaN NaN NaN NaN NaN   \n",
-       "99   \\n\\nBase metal\\nDIN\\nEN\\nASTM\\n\\n\\nShipbuildin... NaN NaN NaN NaN NaN   \n",
-       "\n",
-       "                                                   url  \n",
-       "0    http://www.ceweld.nl/en/product/cusi-3-laser-b...  \n",
-       "1                http://www.ceweld.nl/en/product/14122  \n",
-       "10             http://www.ceweld.nl/en/product/25-35nb  \n",
-       "100            http://www.ceweld.nl/en/product/7018-a1  \n",
-       "101             http://www.ceweld.nl/en/product/7018-1  \n",
-       "..                                                 ...  \n",
-       "95              http://www.ceweld.nl/en/product/6013-s  \n",
-       "96              http://www.ceweld.nl/en/product/6013-t  \n",
-       "97             http://www.ceweld.nl/en/product/6018-lc  \n",
-       "98                http://www.ceweld.nl/en/product/7010  \n",
-       "99                http://www.ceweld.nl/en/product/7016  \n",
-       "\n",
-       "[660 rows x 51 columns]"
+       "QgridWidget(grid_options={'fullWidthRows': True, 'syncColumnCellResize': True, 'forceFitColumns': True, 'defau…"
       ]
      },
-     "execution_count": 199,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "#Initialization Data Loading Code\n",
-    "data = pd.read_json(r\"welding_data.json\", orient='index')\n",
-    "#data = data.drop(columns=['Unnamed: 0', 'Unnamed: 0.1'], axis = 0)\n",
-    "data"
+    "grid = qgrid.show_grid(data[{'Rp0', 'Rm', 'A5', 'IE-20', 'IE-40', 'IE-60','Hardness', 'Hardness_Scale', 'url'}] )\n",
+    "metalgrid = qgrid.show_grid(data[meta_data.columns])\n",
+    "grid"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "96bebe7e162d4d0db1c0ca65556eb25c",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "QgridWidget(grid_options={'fullWidthRows': True, 'syncColumnCellResize': True, 'forceFitColumns': True, 'defau…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "data = (grid.get_changed_df()).combine_first(data)\n",
+    "qgrid.show_grid(data['Rp0'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data.to_json('welding_data.json', orient='index')"
    ]
   },
   {
