--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -1167,7 +1167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1192,6 +1192,12 @@
     "        e =e.append(get_elems_list(elements.loc[i], ecols), ignore_index=True)\n",
     "    print(e)\n",
     "    data['elements'] = e['elements']\n",
+    "    return data\n",
+    "\n",
+    "def get_oth_props(df):\n",
+    "    elements = get_elements(df)\n",
+    "    ecols = elements.columns\n",
+    "    data = df.drop(columns = ecols)\n",
     "    return data"
    ]
   },
@@ -1793,7 +1799,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -1813,13 +1819,69 @@
        "Name: elements, Length: 3255, dtype: object"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "pd.read_hdf('props_data.hdf5', 'props')['elements']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'0.25.1'"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.__version__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['Charpy', 'Elongation', 'Tensile', 'Yield', 'aws', 'conformances',\n",
+       "       'ind', 'key features', 'requirements', 'typic_results',\n",
+       "       'typical applications', 'Elongation_Temperature', 'Reduction of area',\n",
+       "       'Reduction of area_Temperature', 'Ultimate tensile strength',\n",
+       "       'Ultimate tensile strength_Temperature', 'Yield strength',\n",
+       "       'Yield strength_Temperature', 'Hardness', 'Manual metal arc_Current',\n",
+       "       'Manual metal arc_Electrode', 'Manual metal arc_Heat input',\n",
+       "       'Manual metal arc_Interpass temperature', 'Manual metal arc_Source',\n",
+       "       'Manual metal arc_Voltage',\n",
+       "       'Post weld heat treatment_Post weld heat treatment temperature',\n",
+       "       'Post weld heat treatment_Post weld heat treatment time', 'extr', 'AWS',\n",
+       "       'Applications', 'Category', 'DIN', 'DIN_W', 'HT_Temp', 'Hardness_Scale',\n",
+       "       'Heat_Treated_As', 'IE-20', 'ISO', 'Name', 'Nb+Ta', 'Ni+Co', 'Others',\n",
+       "       'Properties', 'Redry_Time', 'Rp0', 'Suitable_For', 'url'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def get_counts_df(data):\n",
+    "    return pd.DataFrame(data.count()).transpose()\n",
+    "get_counts_df(get_oth_props(df))"
    ]
   },
   {
