Slight rep modification

--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -1292,7 +1292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -1301,14 +1301,14 @@
      "text": [
       "/home/prasann/anaconda3/lib/python3.7/site-packages/pandas/core/generic.py:2530: PerformanceWarning: \n",
       "your performance may suffer as PyTables will pickle object types that it cannot\n",
-      "map directly to c-types [inferred_type->mixed,key->block1_values] [items->['aws', 'conformances', 'key features', 'requirements', 'typic_results', 'typical applications', 'Elongation_Temperature', 'Reduction of area_Temperature', 'Ultimate tensile strength_Temperature', 'Yield strength_Temperature', 'Hardness', 'Manual metal arc_Current', 'Manual metal arc_Electrode', 'Manual metal arc_Source', 'Manual metal arc_Voltage', 'Post weld heat treatment_Post weld heat treatment temperature', 'Post weld heat treatment_Post weld heat treatment time', 'AWS', 'Applications', 'DIN', 'Heat_Treated_As', 'ISO', 'Name', 'Properties', 'Suitable_For', 'url', 'elements']]\n",
+      "map directly to c-types [inferred_type->mixed,key->block1_values] [items->['elements']]\n",
       "\n",
       "  pytables.to_hdf(path_or_buf, key, self, **kwargs)\n"
      ]
     }
    ],
    "source": [
-    "tmp.to_hdf('props_data.hdf5', 'props')"
+    "df.to_hdf('props_data_2.hdf5', 'props')"
    ]
   },
   {
@@ -2070,7 +2070,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2114,9 +2114,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 70,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'tmp_df' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-70-7fa728ced8e1>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m#tmp_df = tmp_df.drop(columns={'ind', 'Others'})\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mtmp_df\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtmp_df\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdrop\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcolumns\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m{\u001b[0m\u001b[0;34m'extr'\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'tmp_df' is not defined"
+     ]
+    }
+   ],
    "source": [
     "#tmp_df = tmp_df.drop(columns={'ind', 'Others'})\n",
     "tmp_df = tmp_df.drop(columns={'extr'})"
@@ -2525,7 +2537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
