--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -1292,7 +1292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -1308,7 +1308,7 @@
     }
    ],
    "source": [
-    "df.to_hdf('props_data_2.hdf5', 'props')"
+    "df.to_hdf('new_final_data.hdf5', 'props')"
    ]
   },
   {
@@ -1344,22 +1344,399 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Category</th>\n",
+       "      <th>Charpy</th>\n",
+       "      <th>DIN_W</th>\n",
+       "      <th>Elongation</th>\n",
+       "      <th>HT_Temp</th>\n",
+       "      <th>Hardness_Scale</th>\n",
+       "      <th>IE-20</th>\n",
+       "      <th>Manual metal arc_Heat input</th>\n",
+       "      <th>Manual metal arc_Interpass temperature</th>\n",
+       "      <th>Nb+Ta</th>\n",
+       "      <th>...</th>\n",
+       "      <th>Redry_Time</th>\n",
+       "      <th>Reduction of area</th>\n",
+       "      <th>Rp0</th>\n",
+       "      <th>Tensile</th>\n",
+       "      <th>Ultimate tensile strength</th>\n",
+       "      <th>Yield</th>\n",
+       "      <th>Yield strength</th>\n",
+       "      <th>extr</th>\n",
+       "      <th>ind</th>\n",
+       "      <th>elements</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>27.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>22.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>490.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>400.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>[C, Cr, Mn, Mo, P, Si, V]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>226.5</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>31.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>557.5</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>470.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>[C, Cr, Mn, Mo, P, Si, V]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>10</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>27.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>24.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>550.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>510.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>161.0</td>\n",
+       "      <td>[]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>100</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>19.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>550.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>460.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>289.0</td>\n",
+       "      <td>[C, Mn, Mo, P, S, Si]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>26.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>150.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>78.8</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>560.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>484.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>[C, Cu, Fe, Mn, P, S, Si]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>995</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>[C, Fe, Mn, Ni, P, S, Si]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>996</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>26.6</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>200.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>70.8</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>677.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>584.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>[C, Fe, Mn, Ni, P, S, Si]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>997</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>22.2</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>200.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>69.7</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>753.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>692.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>[C, Fe, Mn, Ni, P, S, Si]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>998</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>200.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>[C, Fe, Mn, Ni, P, S, Si]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>999</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>24.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>200.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>67.5</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>745.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>662.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>[C, Fe, Mn, Ni, P, S, Si]</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>3255 rows × 22 columns</p>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "'0.25.1'"
+       "      Category  Charpy  DIN_W  Elongation  HT_Temp  Hardness_Scale  IE-20  \\\n",
+       "0          0.0    27.0    0.0        22.0      0.0             0.0    0.0   \n",
+       "1          0.0   226.5    0.0        31.0      0.0             0.0    0.0   \n",
+       "10         0.0    27.0    0.0        24.0      0.0             0.0    0.0   \n",
+       "100        0.0     0.0    0.0        19.0      0.0             0.0    0.0   \n",
+       "1000       0.0     0.0    0.0        26.0      0.0             0.0    0.0   \n",
+       "...        ...     ...    ...         ...      ...             ...    ...   \n",
+       "995        0.0     0.0    0.0         0.0      0.0             0.0    0.0   \n",
+       "996        0.0     0.0    0.0        26.6      0.0             0.0    0.0   \n",
+       "997        0.0     0.0    0.0        22.2      0.0             0.0    0.0   \n",
+       "998        0.0     0.0    0.0         0.0      0.0             0.0    0.0   \n",
+       "999        0.0     0.0    0.0        24.0      0.0             0.0    0.0   \n",
+       "\n",
+       "      Manual metal arc_Heat input  Manual metal arc_Interpass temperature  \\\n",
+       "0                             0.0                                     0.0   \n",
+       "1                             0.0                                     0.0   \n",
+       "10                            0.0                                     0.0   \n",
+       "100                           0.0                                     0.0   \n",
+       "1000                          1.0                                   150.0   \n",
+       "...                           ...                                     ...   \n",
+       "995                           0.0                                     0.0   \n",
+       "996                           1.0                                   200.0   \n",
+       "997                           1.0                                   200.0   \n",
+       "998                           1.0                                   200.0   \n",
+       "999                           1.0                                   200.0   \n",
+       "\n",
+       "      Nb+Ta  ...  Redry_Time  Reduction of area  Rp0  Tensile  \\\n",
+       "0       0.0  ...         0.0                0.0  0.0    490.0   \n",
+       "1       0.0  ...         0.0                0.0  0.0    557.5   \n",
+       "10      0.0  ...         0.0                0.0  0.0    550.0   \n",
+       "100     0.0  ...         0.0                0.0  0.0    550.0   \n",
+       "1000    0.0  ...         0.0               78.8  0.0      0.0   \n",
+       "...     ...  ...         ...                ...  ...      ...   \n",
+       "995     0.0  ...         0.0                0.0  0.0      0.0   \n",
+       "996     0.0  ...         0.0               70.8  0.0      0.0   \n",
+       "997     0.0  ...         0.0               69.7  0.0      0.0   \n",
+       "998     0.0  ...         0.0                0.0  0.0      0.0   \n",
+       "999     0.0  ...         0.0               67.5  0.0      0.0   \n",
+       "\n",
+       "      Ultimate tensile strength  Yield  Yield strength  extr    ind  \\\n",
+       "0                           0.0  400.0             0.0   0.0    0.0   \n",
+       "1                           0.0  470.0             0.0   0.0    1.0   \n",
+       "10                          0.0  510.0             0.0   0.0  161.0   \n",
+       "100                         0.0  460.0             0.0   0.0  289.0   \n",
+       "1000                      560.0    0.0           484.0   1.0    0.0   \n",
+       "...                         ...    ...             ...   ...    ...   \n",
+       "995                         0.0    0.0             0.0   1.0    0.0   \n",
+       "996                       677.0    0.0           584.0   1.0    0.0   \n",
+       "997                       753.0    0.0           692.0   1.0    0.0   \n",
+       "998                         0.0    0.0             0.0   1.0    0.0   \n",
+       "999                       745.0    0.0           662.0   1.0    0.0   \n",
+       "\n",
+       "                       elements  \n",
+       "0     [C, Cr, Mn, Mo, P, Si, V]  \n",
+       "1     [C, Cr, Mn, Mo, P, Si, V]  \n",
+       "10                           []  \n",
+       "100       [C, Mn, Mo, P, S, Si]  \n",
+       "1000  [C, Cu, Fe, Mn, P, S, Si]  \n",
+       "...                         ...  \n",
+       "995   [C, Fe, Mn, Ni, P, S, Si]  \n",
+       "996   [C, Fe, Mn, Ni, P, S, Si]  \n",
+       "997   [C, Fe, Mn, Ni, P, S, Si]  \n",
+       "998   [C, Fe, Mn, Ni, P, S, Si]  \n",
+       "999   [C, Fe, Mn, Ni, P, S, Si]  \n",
+       "\n",
+       "[3255 rows x 22 columns]"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "pd.__version__"
+    "df"
    ]
   },
   {
